revertTitlebar - fix overlapping header toolbar in friends list

--- a/revertTitlebar/themefile.css
+++ b/revertTitlebar/themefile.css
@@ -48,10 +48,12 @@ div[class*="titleBar-"] div:nth-of-type(4) {
     margin-left: 8px;
 }
 
-.chat [class*='titleWrapper-'] [class*='flex-'] [class*='flex-'] {
+.chat [class*='titleWrapper-'] [class*='flex-'] [class*='flex-'],
+#friends [class*='flex-'] [class*='flex-']:last-of-type {
     margin-right: 98px;
 }
-.chat [class*='titleWrapper-'] [class*='flex-'] [class*='flex-']:after {
+.chat [class*='titleWrapper-'] [class*='flex-'] [class*='flex-']:after,
+#friends [class*='flex-'] [class*='flex-']:last-of-type:after {
     content: '';
     width: 1px;
     height: 22px;
